# erp

./: .env  .gitignore  .pre-commit-config.yaml  README.md  compose.dev.yml  compose.yaml  manage.py  pyproject.toml
.github/workflows/: unittest.yaml
docker/: Dockerfile  entrypoint.local.sh  entrypoint.worker.sh
erp/: apps.py  enums.py  forms.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tasks_functions.py  urls.py  views.py
erp/invoices/: generators.py  invoice.html
erp/management/commands/: populate.py
erp/manufacturing_workflows/: __init__.py  ra_84672.py
erp/migrations/: 0001_initial.py  0002_currencyrate.py  0003_alter_currencyrate_exchange_rate.py  0004_employee_user.py  0005_alter_warehouse_contact_phone.py  0006_alter_supplier_phone.py  0007_alter_customer_phone.py  0008_alter_billofmaterials_version_and_more.py  0009_ordernumber_alter_shift_workstation.py  0010_alter_invoice_options_invoice_company_address_and_more.py  0011_invoice_generated_pdf.py  0012_alter_invoice_company_phone_and_more.py
erp/templates/: base.html  invoice_form.html  invoice_list.html  salesorder_form.html  user_profile.html
erp/test/: test_invoice_generator.py  test_manufacturing_workflows.py  test_tasks.py  test_views.py
erp/urls/: api.py  app.py
erp_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
erp_system/middleware/: idle_timeout.py  performance.py
erp_system/settings/: base.py  local.py  production.py  test.py
erp_system/static/css/: style.css
erp_system/templates/registration/: base.html  login.html
